Ensures that the pagination font size is not too large.

--- a/app/assets/stylesheets/_pagination.scss
+++ b/app/assets/stylesheets/_pagination.scss
@@ -3,6 +3,7 @@
   text-align: center;
   padding: 1em 0;
   cursor: default;
+  font-size: 0.8em;
 
   a, span, em {
     padding: 0.2em 0.5em;
